stylesheet.css
:root {
    font-size: 16px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    --text-primary: #ffffff;
    --text-secondary: #5b5b5d;
    --bg-secondary: #1e2124;
    --bg-primary: #282b30;
}

body {
    background: url(https://user-images.githubusercontent.com/92211895/220834482-fdde7ed3-10b2-4493-8c29-ebda0b2258bb.png);
    background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size:cover;
    -o-background-size:cover;
    margin: 0;
    padding: 0;
}

.navbar::-webkit-scrollbar {
    width: 0.25rem;
}
.navbar::-webkit-scrollbar-track {
    background: var(--bg-secondary);
}
.navbar::-webkit-scrollbar-thumb {
    background: #7289da;
}

main {
    margin-left: 3rem;
    padding: 1rem;
}
.navbar {
    background: var(--bg-primary );
    transition: width 200ms ease;
}

.navbar-nav {
    list-style: none;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
} 

.nav-link {
    display: flex;
    align-items: center;
    height: 4rem;
    color: var(--text-primary);
    text-decoration: none;
    filter: grayscale(100%);
    transition: 200ms;
}
.nav-link:hover {
    filter: grayscale(0%);
    background: var(--bg-secondary);
}

.link-text {
    display: none;
    margin-left: 1rem;
}

.nav-icon {
    min-width: 2rem;
    max-width: 2rem;
    margin: 0 1rem;
}




.logo {
    font-weight: bold;
    text-transform: uppercase;
    margin-bottom: 1rem;
    text-align: center;
    letter-spacing: 0.3ch;
    background: var(--bg-secondary);
}
.logo img {
    transform: rotate(0deg);
    transition: transform 200ms;
}
.navbar:hover .logo img {
    transform: rotate(-180deg);
    
}

.clock {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translateX(-50%) translateY(-50%);
    color: #ffffff;
    font-size: 11vmin;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

@media only screen and (max-width: 600px) {
    .navbar {
        position: fixed;
        overflow-x: scroll;
        overflow-y: hidden;
        bottom: 0;
        width: 100vw;
        height: 4rem;
    }

    .logo {
        display: none;

    }

    .navbar-nav {
        flex-direction: row;
    }

    .nav-link {
        justify-content: center;
    }

    main {
        margin: 0;
    }

}

@media only screen and (min-width: 600px) {
    .navbar {
        position: fixed;
        overflow-y: scroll;
        overflow-x: hidden;
        top: 0;
        width: 4rem;
        height: 100vh;
    }
    

    .navbar:hover {
        width: 14rem;
    }

    .navbar:hover .link-text {
        display: inline;
    }

    .nav-link:hover {
        padding-left: 1.5rem;
    }
    #logo {
        padding-left: 0;
    }
}

